--- a/index.html
+++ b/index.html
@@ -2,11 +2,35 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>Biglietto treno</title>
   </head>
   <body>
-    <h1 id="title"></h1>
+    <div class="container">
+      <header>
+        <div class="image">
+          <img src="img/trenitalia.png" alt="treno">
+        </div>
+      </header>
+      <nav>
+        <div class="navbar">
+          <ul>
+            <li><a href="#">Le nostre destinazioni</a></li>
+            <li><a href="#">Offerte</a></li>
+            <li><a href="#">Programma giornaliero</a></li>
+            <li><a href="#">Acquista il tuo biglietto</a></li>
+          </ul>
+        </div>
+      </nav>
 
+      <main>
+        <div class="costo-biglietto">
+          <span>Il tuo biglietto ti costerà: </span><span id="title"></span>
+        </div>
+
+        <h2>Grazie per averci scelto, a presto!</h2>
+      </main>
+    </div>
 
     <script type="text/javascript" src="js/script.js">
     </script>
