esercizio biglietto treno js- modifiche css e html

--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
       </nav>
 
       <main>
-        <div class="costo-biglietto">
-          <span>Il tuo biglietto ti costerà: </span><span id="title"></span>
+        <div class="biglietto-int">
+          <span>Il prezzo del biglietto intero è di €: </span>
+          <span id="prezzo-intero"></span>
+        </div>
+
+        <div class="">
+          <span>Il tuo biglietto ti costerà €: </span>
+          <span id="title"></span>
         </div>
 
         <h2>Grazie per averci scelto, a presto!</h2>
